--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
   properties:
     hibernate:
     #default_batch_fetch_size: 1000
-
+file:
+  user:
+    profileDir: C:\Users\ruddh\Pictures\image\
 jwt:
   secret: VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
